This this the changelog file for the Pothos C++ library.

Release 0.3.0 (pending)
==========================

- Added displayable port alias name to framework APIs
- Support conditional preview mode in block description parser
- Applications can cleanup before exit with deinit()
- Detection logic in input port for queue overflows
- Added network utils for IPv6 with fall-back support
- Improved error reporting and formatting for self tests
- Fixed text fixture symbol declaration for OSX
- Set library SOVERSION using POTHOS_ABI_VERSION
- Use requestTermination in server and fix destructor throw
- RemoteProxyEnvironment reply cache check without blocking
- Bumped API number to "0.3-0" for serialization changes
- Re-implement RPC datagram format with embedded length
- Switch to portable binary Object serialization from EOS

Release 0.2.2 (pending)
==========================

- Fix Topology::dumpJSON undefined JSON Object behavior
- Buffer accumulator pop all front-most consumed buffers
- Fixed Buffer manager reuse on small consume logic
- Fixed Pothos Util doc parse bug in use of seekg()

Release 0.2.1 (2015-08-26)
==========================

- Fix buffer accumulator require circular optimization
- Support custom multi-dest buffers when domain unspecified
- JSON stats use block name from flattened hierarchy
- Cache calls to get buffer manager implementations
- Install buffer managers skips signal/slot ports
- Default propagate labels now skips signal ports
- Support alias paths in block description markup
- Fixed workInfo element counts to exclude signals/slots
- Fixed integer parser failure in named ports setup
- Allow work() operation with unused output ports
- Created new test suite macro for array equality
- WorkerActor push downstream only when data available
- Fix Topology::waitInactive() activity checker
- Fix input port buffer accumulator total counter
- Implement SoapySDRConfigVersion.cmake version check

Release 0.2.0 (2015-06-17)
==========================
